[gd_scene load_steps=2 format=3 uid="uid://c7d8e9f0g1h2i"]

[ext_resource type="Script" path="res://ui/equipment_panel.gd" id="1"]

[node name="EquipmentPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MainContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="MainContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="MainContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Equipment"
vertical_alignment = 1

[node name="CurrencyLabel" type="Label" parent="MainContainer/TopBar"]
layout_mode = 2
text = "Currency: 0"
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="MainContainer/TopBar"]
layout_mode = 2
text = "X"

[node name="EquipmentSlots" type="HBoxContainer" parent="MainContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 50.0
offset_bottom = 200.0
grow_horizontal = 2
alignment = 1

[node name="WeaponSlot" type="Panel" parent="MainContainer/EquipmentSlots"]
custom_minimum_size = Vector2(120, 150)
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/EquipmentSlots/WeaponSlot"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Weapon"
horizontal_alignment = 1

[node name="Button" type="Button" parent="MainContainer/EquipmentSlots/WeaponSlot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Icon" type="TextureRect" parent="MainContainer/EquipmentSlots/WeaponSlot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -5.0
offset_right = 30.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="LevelLabel" type="Label" parent="MainContainer/EquipmentSlots/WeaponSlot"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "Lv. 1"
horizontal_alignment = 1

[node name="ArmorSlot" type="Panel" parent="MainContainer/EquipmentSlots"]
custom_minimum_size = Vector2(120, 150)
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/EquipmentSlots/ArmorSlot"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Armor"
horizontal_alignment = 1

[node name="Button" type="Button" parent="MainContainer/EquipmentSlots/ArmorSlot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Icon" type="TextureRect" parent="MainContainer/EquipmentSlots/ArmorSlot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -5.0
offset_right = 30.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="LevelLabel" type="Label" parent="MainContainer/EquipmentSlots/ArmorSlot"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "Lv. 1"
horizontal_alignment = 1

[node name="TrinketSlot" type="Panel" parent="MainContainer/EquipmentSlots"]
custom_minimum_size = Vector2(120, 150)
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/EquipmentSlots/TrinketSlot"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Trinket"
horizontal_alignment = 1

[node name="Button" type="Button" parent="MainContainer/EquipmentSlots/TrinketSlot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Icon" type="TextureRect" parent="MainContainer/EquipmentSlots/TrinketSlot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -5.0
offset_right = 30.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="LevelLabel" type="Label" parent="MainContainer/EquipmentSlots/TrinketSlot"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "Lv. 1"
horizontal_alignment = 1

[node name="StatsPanel" type="Panel" parent="MainContainer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -165.0
offset_right = 170.0
offset_bottom = 135.0
grow_vertical = 2

[node name="StatsLabel" type="Label" parent="MainContainer/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Total Stats:
"
vertical_alignment = 1

[node name="InventorySection" type="VBoxContainer" parent="MainContainer"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -410.0
offset_top = 210.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 2

[node name="InventoryLabel" type="Label" parent="MainContainer/InventorySection"]
layout_mode = 2
text = "Inventory"

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/InventorySection"]
layout_mode = 2
size_flags_vertical = 3

[node name="InventoryGrid" type="GridContainer" parent="MainContainer/InventorySection/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="ComparisonPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -200.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 2

[node name="ComparisonLabel" type="RichTextLabel" parent="ComparisonPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "Item Comparison"

[node name="StrengthenPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -200.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 2

[node name="InfoLabel" type="Label" parent="StrengthenPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
text = "Item Info"

[node name="StrengthenButton" type="Button" parent="StrengthenPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -50.0
offset_right = 75.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Strengthen"
